# CPPBasics

./: .gitignore  CMakeLists.txt  README.md  makefile
Basics/: CMakeLists.txt
Basics/source/: includeBasics.cpp
OOP/: CMakeLists.txt  OOP.cpp
OOP/include/: includeNode.h  includeOOP.h
OOP/source/: includeNode.cpp  includeOOP.cpp
Tetris/: CMakeLists.txt  main.cpp  makefile  테트리스.drawio
Tetris/.Trash/: Terminal.h  Tetris.h
Tetris/Data/: BlockData.txt
Tetris/Trash/: Board.cpp  Terminal.h  Tetris.h
Tetris/data/: BlockData.json  BlockData.txt
Tetris/diagram/: 테트리스.drawio  테트리스.html
Tetris/include/: Block.h  Block.hpp  Board.h  Board.hpp  CList.hpp  GameManager.h  GameManager.hpp  ObjectManager.hpp  SystemManager.hpp  Terminal.h  Tetris.h
Tetris/source/: Block.cpp  Board.cpp  GameManager.cpp  ObjectManager.cpp  SystemManager.cpp  Terminal.cpp  Tetris.cpp
markdown/: Basics.md  Cpp_Basics  Cpp_Basics.md  OOP.md  Tetris.md
project_Basics/: CMakeLists.txt  example1.cpp
project_Basics/include/: includeBasics.h
project_Basics/source/: example1.cpp  includeBasics.cpp
